fixed profile issue where it went off screen

--- a/CSS/Main.css
+++ b/CSS/Main.css
@@ -11,16 +11,16 @@ body{
 
 .header,.footer{
     background-color: #4B006E;
-    min-height: 70px;
+    min-height: 75px;
     width: 100%;
     align-items: center;
     display: flex;
     padding: 0 20px;
-    overflow: hidden;
+    box-sizing: border-box;
 }
 
 #Logo{
-    height: 60px;
+    height: 55px;
     width: auto;
 }
 
@@ -52,7 +52,7 @@ ul{
 }
 
 li{
-    padding: 0 10px;
+    padding: 0 20px;
 }
 
 .fraclass{
